8237858: PlainSocketImpl.socketAccept() handles EINTR incorrectly

PlainSocketImpl.socketAccept() handles EINTR incorrectly

Reviewed-by: alanb, dfuchs, martin